--- a/package.json
+++ b/package.json
@@ -14,10 +14,17 @@
   },
   "dependencies": {
     "@prisma/client": "^5.19.0",
+    "@tanstack/react-query": "^5.53.1",
+    "@trpc/client": "^10.45.2",
+    "@trpc/next": "^10.45.2",
+    "@trpc/react-query": "^10.45.2",
+    "@trpc/server": "^10.45.2",
     "next": "14.2.7",
     "prisma": "^5.19.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "superjson": "^2.2.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
