--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "prisma generate && next dev",
-    "build": "prisma generate && prisma db push && prisma db seed && next build",
+    "db:init": "prisma generate && prisma db push && prisma db seed",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -14,7 +15,9 @@
   },
   "dependencies": {
     "@prisma/client": "^5.19.0",
-    "@tanstack/react-query": "^5.53.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/themes": "^3.1.3",
+    "@tanstack/react-query": "^4.35.3",
     "@trpc/client": "^10.45.2",
     "@trpc/next": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
@@ -23,6 +26,7 @@
     "prisma": "^5.19.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "superjson": "^2.2.1",
     "zod": "^3.23.8"
   },
